--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "php": ">=8.0",
     "symfony/var-dumper": "^7.1",
     "vlucas/valitron": "^1.4",
-    "illuminate/database": "^11.34"
+    "illuminate/database": "^11.34",
+    "laravel/serializable-closure": "^2.0"
   }
 }
